[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Actors/Overworld/OverworldEnemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Actors/Actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Actors/DustParticles.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=3]
resource_local_to_scene = true
margin = 0.001
radius = 0.32
height = 0.01

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="CapsuleShape" id=2]
radius = 0.32
height = 0.01

[node name="OverworldEnemy" instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 129
script = ExtResource( 1 )
dust_particles = ExtResource( 3 )

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 3 )

[node name="AggroArea" type="Area" parent="." index="5"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AggroArea" index="0"]
shape = SubResource( 1 )

[node name="PlayerDetectorArea" type="Area" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetectorArea" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.325, 0 )
shape = SubResource( 2 )

[node name="GroundRayCast" type="RayCast" parent="." index="7"]
cast_to = Vector3( 0, -0.1, 0 )
collision_mask = 129

[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]
[connection signal="body_entered" from="PlayerDetectorArea" to="." method="_on_PlayerDetectorArea_body_entered"]
